--- a/org.springframework.flex.roo.addon/pom.xml
+++ b/org.springframework.flex.roo.addon/pom.xml
@@ -26,42 +26,42 @@
 		<repository>
 	  		<id>spring-roo-repository</id>
 	  		<name>Spring Roo Repository</name>
-	  		<url>http://spring-roo-repository.springsource.org/release</url>
+	  		<url>https://spring-roo-repository.springsource.org/release</url>
 		</repository>
 		<repository>
 			<id>com.springsource.repository.bundles.release</id>
 			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
-			<url>http://repository.springsource.com/maven/bundles/release</url>
+			<url>https://repository.springsource.com/maven/bundles/release</url>
 		</repository>
 		<repository>
 			<id>com.springsource.repository.bundles.external</id>
 			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
-			<url>http://repository.springsource.com/maven/bundles/external</url>
+			<url>https://repository.springsource.com/maven/bundles/external</url>
 		</repository>
 		<repository>
 			<id>com.springsource.repository.bundles.milestone</id>
 			<name>SpringSource Enterprise Bundle Repository - External Bundle Milestones</name>
-			<url>http://repository.springsource.com/maven/bundles/milestone</url>
+			<url>https://repository.springsource.com/maven/bundles/milestone</url>
 		</repository>
 		<repository>
 			<id>com.springsource.repository.bundles.snapshot</id>
 			<name>SpringSource Enterprise Bundle Repository - Nightly Snapshots</name>
-			<url> http://repository.springsource.com/maven/bundles/snapshot</url>
+			<url> https://repository.springsource.com/maven/bundles/snapshot</url>
 		</repository>
 		<repository>
 			<id>maven.springframework.org.milestone</id>
 			<name>Spring Framework Maven Repository - Milestone Releases</name>
-			<url>http://maven.springframework.org/milestone</url>
+			<url>https://maven.springframework.org/milestone</url>
 		</repository>
 		<repository>
 			<id>maven.springframework.org.snapshot</id>
 			<name>Spring Framework Maven Repository - Nightly Snapshots</name>
-			<url>http://maven.springframework.org/milestone</url>
+			<url>https://maven.springframework.org/milestone</url>
 		</repository>
 		<repository>
 			<id>metaas-repo</id>
 			<name>Metaas Maven Repository</name>
-			<url>http://maven.badgers-in-foil.co.uk/maven2/</url>
+			<url>https://maven.badgers-in-foil.co.uk/maven2/</url>
 		</repository>
 	</repositories>
 
